tests/compile-fail/integration__integration__general__jump_offsetof_expression.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: argument must be a compile-time constant
   ┌─ <input>:11:18
   │
11 │         jump(30, (offsetof(label) + 4) * 2);
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^ not constant
   │
   = because the argument is a jump offset


